Fixed Logo Overflow

--- a/css/abrar.css
+++ b/css/abrar.css
@@ -7,7 +7,7 @@ span[class^="glyphicon"]{
 }
 
 .logo img{
-    max-width: 2em;
+    max-width: 1.5em;
 }
 
 .mainHeader{
